// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiDescribedFormGroup is rendered 1`] = `
<div
  aria-label="aria-label"
  className="euiDescribedFormGroup testClass1 testClass2"
  data-test-subj="test subject string"
  role="group"
>
  <EuiFlexGroup
    alignItems="baseline"
    gutterSize="l"
  >
    <EuiFlexItem
      className="euiDescribedFormGroup__descriptionColumn"
      grow={1}
    >
      <EuiTitle
        className="euiDescribedFormGroup__title"
        size="xs"
      >
        <h3>
          Title
        </h3>
      </EuiTitle>
      <EuiText
        className="euiDescribedFormGroup__description"
        color="subdued"
        size="s"
      >
        <p>
          Test description
        </p>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescribedFormGroup__fields"
      grow={1}
    >
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        labelType="label"
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescribedFormGroup props description is not rendered when it's not provided 1`] = `
<div
  className="euiDescribedFormGroup"
  role="group"
>
  <EuiFlexGroup
    alignItems="baseline"
    gutterSize="l"
  >
    <EuiFlexItem
      className="euiDescribedFormGroup__descriptionColumn"
      grow={1}
    >
      <EuiTitle
        className="euiDescribedFormGroup__title"
        size="xs"
      >
        <h3>
          Title
        </h3>
      </EuiTitle>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescribedFormGroup__fields"
      grow={1}
    >
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        labelType="label"
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescribedFormGroup props fullWidth is rendered 1`] = `
<div
  className="euiDescribedFormGroup euiDescribedFormGroup--fullWidth"
  role="group"
>
  <EuiFlexGroup
    alignItems="baseline"
    gutterSize="l"
  >
    <EuiFlexItem
      className="euiDescribedFormGroup__descriptionColumn"
      grow={1}
    >
      <EuiTitle
        className="euiDescribedFormGroup__title"
        size="xs"
      >
        <h3>
          Title
        </h3>
      </EuiTitle>
      <EuiText
        className="euiDescribedFormGroup__description"
        color="subdued"
        size="s"
      >
        <p>
          Test description
        </p>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescribedFormGroup__fields"
      grow={1}
    >
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={true}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        labelType="label"
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescribedFormGroup props gutterSize is rendered 1`] = `
<div
  className="euiDescribedFormGroup"
  role="group"
>
  <EuiFlexGroup
    alignItems="baseline"
    gutterSize="s"
  >
    <EuiFlexItem
      className="euiDescribedFormGroup__descriptionColumn"
      grow={1}
    >
      <EuiTitle
        className="euiDescribedFormGroup__title"
        size="xs"
      >
        <h3>
          Title
        </h3>
      </EuiTitle>
      <EuiText
        className="euiDescribedFormGroup__description"
        color="subdued"
        size="s"
      >
        <p>
          Test description
        </p>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescribedFormGroup__fields"
      grow={1}
    >
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        labelType="label"
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescribedFormGroup props props for the flex item containers are passed down 1`] = `
<div
  className="euiDescribedFormGroup"
  role="group"
>
  <EuiFlexGroup
    alignItems="baseline"
    gutterSize="l"
  >
    <EuiFlexItem
      className="euiDescribedFormGroup__descriptionColumn"
      grow={2}
    >
      <EuiTitle
        className="euiDescribedFormGroup__title"
        size="xs"
      >
        <h3>
          Title
        </h3>
      </EuiTitle>
      <EuiText
        className="euiDescribedFormGroup__description"
        color="subdued"
        size="s"
      >
        <p>
          Test description
        </p>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescribedFormGroup__fields"
      component="section"
      grow={1}
    >
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        labelType="label"
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescribedFormGroup props third is rendered 1`] = `
<div
  className="euiDescribedFormGroup"
  role="group"
>
  <EuiFlexGroup
    alignItems="baseline"
    gutterSize="l"
  >
    <EuiFlexItem
      className="euiDescribedFormGroup__descriptionColumn"
      grow={1}
    >
      <EuiTitle
        className="euiDescribedFormGroup__title"
        size="xs"
      >
        <h3>
          Title
        </h3>
      </EuiTitle>
      <EuiText
        className="euiDescribedFormGroup__description"
        color="subdued"
        size="s"
      >
        <p>
          Test description
        </p>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescribedFormGroup__fields"
      grow={2}
    >
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={true}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        labelType="label"
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescribedFormGroup props titleSize is rendered 1`] = `
<div
  className="euiDescribedFormGroup"
  role="group"
>
  <EuiFlexGroup
    alignItems="baseline"
    gutterSize="l"
  >
    <EuiFlexItem
      className="euiDescribedFormGroup__descriptionColumn"
      grow={1}
    >
      <EuiTitle
        className="euiDescribedFormGroup__title"
        size="l"
      >
        <h3>
          Title
        </h3>
      </EuiTitle>
      <EuiText
        className="euiDescribedFormGroup__description"
        color="subdued"
        size="s"
      >
        <p>
          Test description
        </p>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescribedFormGroup__fields"
      grow={1}
    >
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        labelType="label"
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescribedFormGroup ties together parts for accessibility 1`] = `
<div
  className="euiDescribedFormGroup"
  role="group"
>
  <EuiFlexGroup
    alignItems="baseline"
    gutterSize="l"
  >
    <EuiFlexItem
      className="euiDescribedFormGroup__descriptionColumn"
      grow={1}
    >
      <EuiTitle
        className="euiDescribedFormGroup__title"
        size="xs"
      >
        <h3>
          Title
        </h3>
      </EuiTitle>
      <EuiText
        className="euiDescribedFormGroup__description"
        color="subdued"
        size="s"
      >
        <p>
          Test description
        </p>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescribedFormGroup__fields"
      grow={1}
    >
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        error={
          Array [
            "Error one",
            "Error two",
          ]
        }
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        helpText="Help text"
        isInvalid={true}
        label="Label"
        labelType="label"
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;
